# missioncontrol

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  buildspec-test.yml  buildspec.yml  local.yml  manage.py  mu.yml  production.yml  pyproject.toml  pytest.ini  test.yml
.envs/.local/: .django  .postgres
.github/workflows/: test.yml
cli/: dj  mcapi.py  pass.py  psql  pytest  update_tles.py
compose/caddy/: Dockerfile
compose/django/: Dockerfile  entrypoint  start
compose/local/django/: Dockerfile  start
compose/postgres/: Dockerfile
compose/production/caddy/: Caddyfile
compose/production/django/: Dockerfile  entrypoint  (+1 more)
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
missioncontrol/: api.py
missioncontrol/datalake/: admin.py  apps.py  models.py
missioncontrol/home/: admin.py  leaf.py  models.py  urls.py
missioncontrol/openapi/: openapi.yaml
missioncontrol/tests/: conftest.py  test_access_id.py  test_files.py  test_files_admin.py  test_groundstation.py  test_isodatetimefield.py  test_leaf_passfile.py  test_pass.py  test_pass_attributes.py  test_pass_task_run.py  test_pass_task_stack.py  test_satellite.py  test_satellite_task_stack.py  test_task_stack.py  test_time.py  utils.py
missioncontrol/v0/: accesses.py  auth.py  files.py  files_admin.py  groundstations.py  pass_task_run.py  pass_task_stack.py  passes.py  satellite_task_stack.py  satellites.py  task_stacks.py  time.py  track.py
samples/Pass/: 0014544.in
(+29 files in other folders)
