[tool.poetry]
name = "missioncontrol"
version = "0.0.1"
description = "Mission Planning for Large Constellations"
authors = ["Louis des Landes <louis.deslandes@fleet.space>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
django = {extras = ["argon2"],version = "<2.3.0"}
requests = "*"
pytz = "*"
connexion = ">=2.6.0"
gunicorn = "*"
psycopg2-binary = "*"
whitenoise = {extras = ["brotli"],version = "*"}
pytest-django = "*"
bitarray = "*"
slackclient = "*"
astropy = "*"
skyfield = "*"
ipdb = "*"
pycrypto = "*"
scipy = "*"
python-jose = "*"
tabulate = "*"
django-environ = "*"
python-dateutil = "*"
importlib-metadata = "*"
[tool.poetry.dev-dependencies]
pylint = "*"
"autopep8" = "*"
yapf = "*"
rope = "*"
django-debug-toolbar = "*"
django-extensions = "*"
pre-commit = "*"
pytest-pythonpath = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
